fix mobile white space

--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  whitespace: initial;
+  white-space: normal;
 }
 
 .image-stack {
